--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,11 @@
 @use "vars_and_mixins" as *;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -31,4 +37,59 @@
   -moz-user-select: none; // Old versions of Firefox
   -ms-user-select: none; // Internet Explorer/Edge
   user-select: none; // Non-prefixed version
+}
+
+.app_form {
+  border: 1px solid #455d7a;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+}
+
+.key_value_group {
+  margin-bottom: 4px;
+  font-size: 14px;
+}
+
+.input_group {
+  // border: 2px solid red;
+  display: flex;
+  flex-direction: horizontal;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.input_label {
+  font-size: 14px;
+  display: inline-block;
+  min-width: 160px;
+}
+
+.input_container {
+  flex: 1;
+}
+
+.input_input {
+  font-size: 14px;
+  width: 100%;
+  height: 32px;
+  padding: 5px 10px;
+}
+
+.disabled {
+  position: relative;
+  pointer-events: none;
+  overflow: hidden;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+    opacity: 0.5;
+  }
 }
